this version contains header + hero + world All responsive !

--- a/Docplanner.html
+++ b/Docplanner.html
@@ -126,7 +126,48 @@
             </div>
         </div>
     </section>
-    <!--  -->
+    <!-- World Section -->
+
+    <section id="world">
+
+        <div class="world-container">
+
+            <div class="world-text">
+                <h1>The world's biggest
+healthcare platform</h1>
+               <p>
+                We work from 11 offices all over the world, bringing Docplanner Group to life in 13 countries.
+               </p>
+            </div>
+
+        <div class="world-cards">
+            <div class="w-cards">
+                <img src="https://www.docplanner.com/img/flag@2x.png" alt="the world">
+                <h1>Leader in 13 countries</h1>
+                <h4>visit our websites each month</h4>
+            </div>
+            <div class="w-cards">
+                <img src="https://www.docplanner.com/img/flag@2x.png" alt="the world">
+                <h1>Leader in 13 countries</h1>
+                <h4>visit our websites each month</h4>
+            </div>
+            <div class="w-cards">
+                <img src="https://www.docplanner.com/img/flag@2x.png" alt="the world">
+                <h1>Leader in 13 countries</h1>
+                <h4>visit our websites each month</h4>
+            </div>
+            <div class="w-cards">
+                <img src="https://www.docplanner.com/img/flag@2x.png" alt="the world">
+                <h1>Leader in 13 countries</h1>
+                <h4>visit our websites each month</h4>
+            </div>
+        </div>
+
+        </div>
+
+        
+
+    </section>
     
 </body>
 </html>
