this version contains + footer !

--- a/Docplanner.html
+++ b/Docplanner.html
@@ -304,6 +304,22 @@ healthcare platform</h1>
         </div>
 
     </section>
+
+    <!-- sounds like -->
+     <section id="sounds">
+        <h1>Sounds interesting? Join us now!</h1>
+        <a href="#">See all current openings</a>
+     </section>
+
+     <!-- Footer -->
+
+     <footer id="my-footer">
+
+        <div class="my-footer-container">
+            <h1>Created By ABBASS CHAHBOUNE &copy;2025</h1>
+        </div>
+
+     </footer>
     
 </body>
 </html>
