this version is The finale project it's done !

--- a/Docplanner.html
+++ b/Docplanner.html
@@ -126,6 +126,51 @@
             </div>
         </div>
     </section>
+    <!-- Global company -->
+     <section id="Global">
+
+        <div class="global-container">
+            <div class="global-headline">
+                <h1>We are a global company with local culture</h1>
+            </div>
+            <div class="global-brands">
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-doctoralia-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-miodottore-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-doktortakvimi-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znamylekar-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-jameda-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+                <div class="brands">
+                    <a class="brand-link" href="#"><img src="https://www.docplanner.com/logos/brands/logo-znanylekarz-hover.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+
+     </section>
     <!-- World Section -->
 
     <section id="world">
